# know-yourself-bot

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat  plan.md
notebooks/: Playgournd: Hugging Face SDK.ipynb  Playground: Taylor Swift Bot.ipynb  Socrates Data.ipynb
