[tool.poetry]
name = "know-yourself-bot"
version = "0.1.0"
description = "Experimental LLM Project"
authors = ["Hao Tong"]
readme = "README.md"
# after many test this line is necessary to include folder as package. see https://python-poetry.org/docs/pyproject/#packages for more details
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
torch = "^2.2.1"
pyarrow = "^15.0.0"
fastparquet = "^2024.2.0"
tensorflow-recommenders = "^0.7.3"
pydot = "^2.0.0"
evaluate = "^0.4.1"
transformers = "^4.38.2"
accelerate = "^0.27.2"
scikit-learn = "^1.4.1.post1"
peft = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
